[gd_scene load_steps=9 format=3 uid="uid://vjnq8ekwhp"]

[ext_resource type="PackedScene" uid="uid://h0b8vci70lp5" path="res://Scenes/Widgets/Widget.tscn" id="1_nmj08"]
[ext_resource type="PackedScene" uid="uid://c0v1qg12ksu2k" path="res://Scenes/CameraController.tscn" id="2_cmtqs"]
[ext_resource type="Script" path="res://Scripts/PlayerUnit.gd" id="2_xc6u4"]
[ext_resource type="PackedScene" uid="uid://deg1ks2s7lkiu" path="res://Scenes/Inventory/Inventory.tscn" id="3_0hvts"]
[ext_resource type="PackedScene" uid="uid://gjkmrmycqwtv" path="res://Scenes/VisibilityModifier.tscn" id="3_oy0ij"]
[ext_resource type="FontFile" uid="uid://0yhrvdgu1gqb" path="res://Assets/Fonts/Xolonium-Bold.otf" id="6_2a7r2"]
[ext_resource type="AudioStream" uid="uid://bppbrets2fw3s" path="res://Assets/Sounds/CrewMemberFootstep.mp3" id="9_ponxo"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ys2lx"]
radius = 0.45
height = 3.21022

[node name="PlayerUnit" instance=ExtResource("1_nmj08")]
collision_layer = 8
collision_mask = 35
script = ExtResource("2_xc6u4")
SPEED = 5
JUMP_VELOCITY = 6
direction = Vector2(0, 0)
jumping = false
friction = 25
acceleration_smoothing = 20
turn_speed = 4.0
skeleton_path = null
bone_chest_name = "Chest"
bone_pelvis_name = "Pelvis"
pelvis_rotation_offset = 0.0
object_name = "Space Marine"
attack_priority = 2.0
Visible_Once_Revealed = false
always_visible_to_owner = true
Target_As = 8
collision_y_range = 2.0

[node name="Inventory" parent="." index="0" instance=ExtResource("3_0hvts")]

[node name="VisibilityModifier" parent="." index="1" instance=ExtResource("3_oy0ij")]
Inner_Radius = 3
Radius = 16

[node name="Health Bar" parent="." index="3"]
transform = Transform3D(0.275, 0, 0, 0, 0.275, 0, 0, 0, 0.275, 0, 1.87405, 0)

[node name="AnimationPlayer" parent="." index="4"]
libraries = {}

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("CapsuleShape3D_ys2lx")

[node name="Shakable Camera" parent="." index="7" instance=ExtResource("2_cmtqs")]
transform = Transform3D(1, 0, 0, 0, 0.173648, 0.984808, 0, -0.984808, 0.173648, 0, -1.25, 0)
input_ray_pickable = false

[node name="LegAnimator" type="AnimationPlayer" parent="." index="8"]

[node name="Breathing" type="AnimationPlayer" parent="." index="9"]
autoplay = "stand"

[node name="ChestAnimator" type="AnimationPlayer" parent="." index="10"]
autoplay = "stand weapon"

[node name="Footstep" type="AudioStreamPlayer3D" parent="." index="11"]
stream = ExtResource("9_ponxo")
max_polyphony = 4
bus = &"Effects"
attenuation_filter_cutoff_hz = 20500.0
attenuation_filter_db = -12.0

[node name="Nametag" type="Label3D" parent="Model" index="0"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 3, 0)
billboard = 1
no_depth_test = true
fixed_size = true
texture_filter = 0
text = "hi"
font = ExtResource("6_2a7r2")
font_size = 48

[editable path="Shakable Camera"]
